fixed span alignment issue for claims filter

--- a/src/assets/css/sass/app.scss
+++ b/src/assets/css/sass/app.scss
@@ -248,16 +248,16 @@ nav ul li {
   width: 100%;
   transition: margin-left 0.5s ease;
   padding-bottom: $footer-height;
-  span {
-    color: rgba(255,255,255,0.5);
-    font-size: 40px;
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    transition: all 2s ease-in-out;
-    transform: translate(-50%,-50%);
-    white-space: nowrap;
-  }
+  // span {
+  //   color: rgba(255,255,255,0.5);
+  //   font-size: 40px;
+  //   left: 50%;
+  //   position: absolute;
+  //   top: 50%;
+  //   transition: all 2s ease-in-out;
+  //   transform: translate(-50%,-50%);
+  //   white-space: nowrap;
+  // }
 }
 
 .shift-main-content {
@@ -365,10 +365,11 @@ nav ul li {
   background: $brand-highlight;
   border-radius: 12px;
   padding: 4px;
-  margin-left: 9px;
+  margin: 0 8px 16px;
   font-size: 16px;
+  width: fit-content;
   i {
-    margin-left: 5px;
+    margin-left: 4px;
   }
 }
 
